--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=Índice%20Principal.html" />
+  <meta http-equiv="refresh" content="0; url="Índice%20Principal.html" />
 </head>
 <body>
   <p>Redirigiendo al índice principal...</p>
