--- a/Naturales/La importancia de la nutrición.html
+++ b/Naturales/La importancia de la nutrición.html
@@ -268,12 +268,14 @@
     <div class="video-responsive">
       <!-- Aquí puedes insertar un enlace real a un vídeo educativo de YouTube o similar -->
       <iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/I4QxjZQT#afcfL4NIcK_10dZPF2zHIz20Geute1CNxplm4MV4OSg" allowfullscreen ></iframe>
-
     </div>
     <h3>Audio resumen (opcional):</h3>
+<div class="video-responsive">
     <iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/JxRxiTZb#SqhuOIfC9qIctDsG77BSSkGLTHyOvOiWB0Yv7K-V0xU" allowfullscreen ></iframe>
+    </div>
+<div class="video-responsive">
 <iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/9ghjQKYa#gX3jJB67eJXGfKPEYVDsp211rBQ5x2S6dcG212Nax8c" allowfullscreen ></iframe>
-
+</div>
   </div>
 
   <div class="footer-button">
