--- a/Matemáticas/Los números romanos.html
+++ b/Matemáticas/Los números romanos.html
@@ -173,6 +173,7 @@
   <p style="text-align: center; margin-bottom: 30px;">Una guía sencilla para 6.º de Primaria</p>
 <div class="header-button">
   <a href="Ìndice Matemáticas.html" class="volver-indice">← Volver al índice</a>
+  <a href="NR_examen.html" class="volver-indice">👉 Ir al examen</a>
 </div>
   <!-- BLOQUE: EXPLICACIÓN DE NÚMEROS ROMANOS -->
   <div class="bloque">
@@ -411,6 +412,7 @@
   </div>
 <div class="footer-button">
   <a href="Ìndice Matemáticas.html" class="volver-indice">← Volver al índice</a>
+  <a href="NR_examen.html" class="volver-indice">👉 Ir al examen</a>
 </div>
   <!-- LÓGICA INTERACTIVA -->
   <script>
