--- a/Matemáticas/Ìndice Matemáticas.html
+++ b/Matemáticas/Ìndice Matemáticas.html
@@ -93,6 +93,7 @@
       <li>Cálculo de siglos (ej.: 1492 → siglo XV)</li>
     </ul>
     <a href="Los números romanos.html">👉 Ir al tema</a>
+    <a href="NR_examen.html" style="background-color: #2196f3; margin-left: 10px;">👉 Ir al examen</a>
   </div>
 
   <!-- Tema 2: Potencias y Raíces -->
@@ -106,6 +107,7 @@
       <li>Raíces cuadradas exactas y no exactas</li>
     </ul>
     <a href="Potencias y raíces.html">👉 Ir al tema</a>
+    <a href="PR_examen.html" style="background-color: #2196f3; margin-left: 10px;">👉 Ir al examen</a>
   </div>
 
   <!-- 
