--- a/Matemáticas/Potencias y raíces.html
+++ b/Matemáticas/Potencias y raíces.html
@@ -172,7 +172,7 @@
   <p style="text-align: center; margin-bottom: 30px;">Material interactivo para 6.º de Primaria — ¡Piensa, escribe y comprueba!</p>
 <div class="header-button">
   <a href="Ìndice Matemáticas.html" class="volver-indice">← Volver al índice</a>
-</div>
+  <a href="NR_examen.html" class="volver-indice">👉 Ir al examen</a></div>
 
   <!-- BLOQUE 1: ¿Qué es una potencia? -->
   <div class="bloque">
@@ -299,6 +299,7 @@
   </div>
 <div class="footer-button">
   <a href="Ìndice Matemáticas.html" class="volver-indice">← Volver al índice</a>
+  <a href="NR_examen.html" class="volver-indice">👉 Ir al examen</a></div>
 </div>
 
   <!-- SCRIPTS (sin cambios) -->
