--- a/Naturales/La importancia de la nutrición.html
+++ b/Naturales/La importancia de la nutrición.html
@@ -173,6 +173,7 @@
   
   <div class="header-button">
     <a href="Índice Naturales.html" class="volver-indice">← Volver al índice</a>
+    <a href="Nut_examen.html" class="volver-indice">👉 Ir al examen</a>
   </div>
 
   <!-- BLOQUE 1: ¿Qué es la nutrición? -->
@@ -280,6 +281,7 @@
 
   <div class="footer-button">
     <a href="Índice Naturales.html" class="volver-indice">← Volver al índice</a>
+    <a href="Nut_examen.html" class="volver-indice">👉 Ir al examen</a>
   </div>
 
   <script>
