--- a/Naturales/Índice Naturales.html
+++ b/Naturales/Índice Naturales.html
@@ -93,6 +93,7 @@
       <li>Hábitos saludables y prevención de enfermedades</li>
     </ul>
     <a href="La importancia de la nutrición.html">👉 Ir al tema</a>
+    <a href="Nut_examen.html" style="background-color: #2196f3; margin-left: 10px;">👉 Ir al examen</a>
   </div>
 
   <!-- 
@@ -105,6 +106,7 @@
         <li>Punto clave 2</li>
       </ul>
       <a href="nombre-del-archivo.html">👉 Ir al tema</a>
+      <a href="Nut_examen.html" style="background-color: #2196f3; margin-left: 10px;">👉 Ir al examen</a>
     </div>
   -->
 
