--- a/Naturales/La importancia de la nutrición.html
+++ b/Naturales/La importancia de la nutrición.html
@@ -198,14 +198,14 @@
       <li><strong>Lípidos (grasas)</strong>: dan energía lenta y duradera (aceite, frutos secos).</li>
       <li><strong>Proteínas</strong>: construyen y reparan tejidos (carne, pescado, legumbres).</li>
       <li><strong>Vitaminas y sales minerales</strong>: regulan el funcionamiento del cuerpo (frutas, verduras).</li>
-      <li><strong>Agua</strong>: transporta nutrientes y elimina desechos.</li>
-      <li><strong>Fibra</strong>: ayuda a la digestión (verduras, cereales integrales).</li>
+      <li><strong>Agua</strong>: transporta nutrientes, regula la temperatura y elimina desechos. ¡Es un nutriente esencial!</li>
+      <li><strong>Fibra</strong>: ayuda a la digestión (verduras, cereales integrales). No se digiere, pero es muy importante.</li>
     </ul>
     <h3>Tipos de alimentos según su función</h3>
     <ul>
       <li><strong>Energéticos</strong>: ricos en hidratos y grasas.</li>
       <li><strong>Constructores</strong>: ricos en proteínas.</li>
-      <li><strong>Reguladores</strong>: ricos en vitaminas y minerales.</li>
+      <li><strong>Reguladores</strong>: ricos en vitaminas, minerales y fibra.</li>
     </ul>
   </div>
 
@@ -214,10 +214,10 @@
     <h2>3. Aparatos que intervienen en la nutrición</h2>
     <table class="tabla">
       <tr><th>Proceso</th><th>Aparato</th><th>Órganos principales</th></tr>
-      <tr><td>Digestión</td><td>Digestivo</td><td>Boca, estómago, intestinos, hígado, páncreas</td></tr>
+      <tr><td>Digestión</td><td>Digestivo</td><td>Boca, estómago, intestino delgado, intestino grueso, hígado, páncreas</td></tr>
       <tr><td>Respiración</td><td>Respiratorio</td><td>Pulmones, tráquea, bronquios</td></tr>
       <tr><td>Circulación</td><td>Circulatorio</td><td>Corazón, arterias, venas, capilares</td></tr>
-      <tr><td>Excreción</td><td>Excretor</td><td>Riñones, vejiga, glándulas sudoríparas</td></tr>
+      <tr><td>Excreción</td><td>Excretor</td><td>Riñones, uréteres, vejiga, uretra, glándulas sudoríparas</td></tr>
     </table>
     <p>✅ Todos estos aparatos trabajan juntos para que tu cuerpo funcione correctamente.</p>
   </div>
@@ -225,19 +225,43 @@
   <!-- BLOQUE 4: La sangre -->
   <div class="bloque">
     <h2>4. La sangre: transporte y defensa</h2>
-    <p>La sangre es un líquido rojo que circula por todo el cuerpo y es esencial para la vida. Está formada por:</p>
+    <p>La sangre es un líquido rojo que circula por todo el cuerpo gracias al <strong>aparato circulatorio</strong>. Está formada por:</p>
     <ul>
       <li><strong>Plasma</strong>: líquido amarillento que transporta nutrientes, hormonas, medicinas y desechos.</li>
-      <li><strong>Glóbulos rojos</strong>: transportan oxígeno desde los pulmones al resto del cuerpo. Son los más abundantes.</li>
+      <li><strong>Glóbulos rojos</strong>: transportan <strong>oxígeno</strong> desde los pulmones al resto del cuerpo. Son los más abundantes y dan el color rojo a la sangre.</li>
       <li><strong>Glóbulos blancos</strong>: defienden el cuerpo contra infecciones y microbios.</li>
-      <li><strong>Plaquetas</strong>: las más pequeñas; ayudan a coagular la sangre cuando nos herimos.</li>
+      <li><strong>Plaquetas</strong>: las más pequeñas; ayudan a que la sangre se coagule cuando nos herimos.</li>
     </ul>
     <p>💡 Todas estas células se fabrican en la <strong>médula ósea</strong> (dentro de los huesos). ¡En un niño de 10-12 años, se fabrican <strong>90.000 millones de glóbulos rojos al día</strong>!</p>
   </div>
 
-  <!-- BLOQUE 5: Alimentación saludable y sostenible -->
+  <!-- BLOQUE 5: El proceso digestivo -->
   <div class="bloque">
-    <h2>5. Alimentación saludable y sostenible</h2>
+    <h2>5. El proceso digestivo</h2>
+    <p>La digestión transforma los alimentos en nutrientes que pueden ser absorbidos:</p>
+    <ul>
+      <li><strong>Boca</strong>: los dientes trituran y la saliva forma el <strong>bolo alimenticio</strong>.</li>
+      <li><strong>Estómago</strong>: los jugos gástricos convierten el bolo en <strong>quimo</strong>.</li>
+      <li><strong>Intestino delgado</strong>: con ayuda del hígado y el páncreas, el quimo se convierte en <strong>quilo</strong>. Aquí se <strong>absorben los nutrientes</strong> a la sangre.</li>
+      <li><strong>Intestino grueso</strong>: absorbe agua y forma las <strong>heces</strong>, que se expulsan por el ano.</li>
+    </ul>
+  </div>
+
+  <!-- BLOQUE 6: Respiración y excreción -->
+  <div class="bloque">
+    <h2>6. Respiración y excreción</h2>
+    <p>• Al <strong>respirar</strong>, tomamos <strong>oxígeno</strong> del aire y lo llevamos a las células.</p>
+    <p>• Las células usan el oxígeno y los nutrientes para producir <strong>energía</strong>. Como desecho, generan <strong>dióxido de carbono</strong>, que eliminamos al <strong>exhalar</strong>.</p>
+    <p>• La <strong>excreción</strong> elimina otros desechos:</p>
+    <ul>
+      <li><strong>Riñones</strong>: filtran la sangre y producen <strong>orina</strong>.</li>
+      <li><strong>Glándulas sudoríparas</strong>: eliminan sudor (agua y sales).</li>
+    </ul>
+  </div>
+
+  <!-- BLOQUE 7: Alimentación saludable -->
+  <div class="bloque">
+    <h2>7. Alimentación saludable y sostenible</h2>
     <p>Una alimentación <strong>saludable</strong> debe ser:</p>
     <ul>
       <li><strong>Equilibrada</strong>: con todos los nutrientes.</li>
@@ -250,25 +274,25 @@
       <li>Elige productos de temporada y locales.</li>
       <li>Evita el desperdicio de alimentos.</li>
     </ul>
-    <p>✅ La <strong>dieta mediterránea</strong> es un ejemplo perfecto de ambas.</p>
+    <p>✅ La <strong>dieta mediterránea</strong> es un ejemplo perfecto: rica en frutas, verduras, legumbres, cereales integrales, aceite de oliva, pescado y poco en carnes rojas.</p>
   </div>
 
-  <!-- BLOQUE 6: Ejercicio - Verdadero o falso (actualizado) -->
+  <!-- BLOQUE 8: Ejercicio - Verdadero o falso (actualizado) -->
   <div class="bloque">
-    <h2>6. Verdadero o falso</h2>
-    <p>a) Las plaquetas evitan que nos desangremos → <button onclick="toggleSol('sol6a')">Mostrar</button></p>
-    <div id="sol6a" class="solution">Verdadero</div>
-    <p>b) El plasma es un componente sólido de la sangre → <button onclick="toggleSol('sol6b')">Mostrar</button></p>
-    <div id="sol6b" class="solution">Falso. El plasma es líquido y de color amarillento.</div>
-    <p>c) La fibra se digiere y aporta mucha energía → <button onclick="toggleSol('sol6c')">Mostrar</button></p>
-    <div id="sol6c" class="solution">Falso. La fibra no se digiere, pero ayuda a la digestión.</div>
-    <p>d) Los glóbulos blancos transportan oxígeno → <button onclick="toggleSol('sol6d')">Mostrar</button></p>
-    <div id="sol6d" class="solution">Falso. Son los glóbulos rojos los que transportan oxígeno.</div>
+    <h2>8. Verdadero o falso</h2>
+    <p>a) Las plaquetas evitan que nos desangremos → <button onclick="toggleSol('sol8a')">Mostrar</button></p>
+    <div id="sol8a" class="solution">Verdadero</div>
+    <p>b) El plasma es un componente sólido de la sangre → <button onclick="toggleSol('sol8b')">Mostrar</button></p>
+    <div id="sol8b" class="solution">Falso. El plasma es líquido y de color amarillento.</div>
+    <p>c) La fibra se digiere y aporta mucha energía → <button onclick="toggleSol('sol8c')">Mostrar</button></p>
+    <div id="sol8c" class="solution">Falso. La fibra no se digiere, pero ayuda a la digestión.</div>
+    <p>d) El agua no es un nutriente → <button onclick="toggleSol('sol8d')">Mostrar</button></p>
+    <div id="sol8d" class="solution">Falso. El agua sí es un nutriente esencial.</div>
   </div>
 
-  <!-- BLOQUE 7: Ejercicio - Clasifica alimentos (actualizado) -->
+  <!-- BLOQUE 9: Ejercicio - Clasifica alimentos -->
   <div class="bloque">
-    <h2>7. Clasifica estos alimentos</h2>
+    <h2>9. Clasifica estos alimentos</h2>
     <p>Indica si son <strong>energéticos (E)</strong>, <strong>constructores (C)</strong> o <strong>reguladores (R)</strong>:</p>
     <p>a) Lentejas → <input type="text" id="alim1" maxlength="1">  
        b) Manzana → <input type="text" id="alim2" maxlength="1">  
@@ -277,9 +301,9 @@
     <div id="resAlim" style="margin-top:10px;"></div>
   </div>
 
-  <!-- BLOQUE 8: Nuevo ejercicio - Componentes de la sangre -->
+  <!-- BLOQUE 10: Ejercicio - Componentes de la sangre -->
   <div class="bloque">
-    <h2>8. ¿Qué componente de la sangre es?</h2>
+    <h2>10. ¿Qué componente de la sangre es?</h2>
     <p>a) Transporta oxígeno → <input type="text" id="sang1" maxlength="15">  
        b) Defiende contra infecciones → <input type="text" id="sang2" maxlength="15">  
        c) Ayuda a coagular → <input type="text" id="sang3" maxlength="15"></p>
@@ -288,9 +312,9 @@
     <div id="resSangre" style="margin-top:10px;"></div>
   </div>
 
-  <!-- BLOQUE 9: Resumen en vídeo -->
+  <!-- BLOQUE 11: Resumen en vídeo -->
   <div class="bloque">
-    <h2>9. Vídeo resumen:</h2>
+    <h2>11. Vídeo resumen:</h2>
     <div class="video-responsive">
       <iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/I4QxjZQT#afcfL4NIcK_10dZPF2zHIz20Geute1CNxplm4MV4OSg" allowfullscreen></iframe>
     </div>
