Update Potencias y raíces.html

--- a/Matemáticas/Potencias y raíces.html
+++ b/Matemáticas/Potencias y raíces.html
@@ -299,7 +299,7 @@
   </div>
 <div class="footer-button">
   <a href="Ìndice Matemáticas.html" class="volver-indice">← Volver al índice</a>
-  <a href="NR_examen.html" class="volver-indice">👉 Ir al examen</a></div>
+  <a href="PR_examen.html" class="volver-indice">👉 Ir al examen</a></div>
 </div>
 
   <!-- SCRIPTS (sin cambios) -->
